--- a/client/callPlannerApp/www/index.html
+++ b/client/callPlannerApp/www/index.html
@@ -23,12 +23,13 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/lb-services.js"></script>
     <script src="modules/users/app.users.js"></script>
     <script src="modules/users/controllers/intro.ctrl.js"></script>
-    <script src="modules/users/controllers/signup.ctrl.js"></script>
     <script src="modules/users/controllers/login.ctrl.js"></script>
+    <script src="modules/users/controllers/signup.ctrl.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
