--- a/client/callPlannerApp/www/index.html
+++ b/client/callPlannerApp/www/index.html
@@ -26,10 +26,23 @@
     <script src="js/config.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/lb-services.js"></script>
+    <script src="modules/core/app.core.js"></script>
+    <script src="modules/core/config/core.routes.js"></script>
+    <script src="modules/core/config/core.config.js"></script>
+    <script src="modules/core/controllers/route.ctrl.js"></script>
+    <script src="modules/core/controllers/main.ctrl.js"></script>
+    <script src="modules/core/controllers/home.ctrl.js"></script>
     <script src="modules/users/app.users.js"></script>
+    <script src="modules/users/config/users.auth.js"></script>
+    <script src="modules/users/config/users.config.js"></script>
+    <script src="modules/users/config/users.routes.js"></script>
     <script src="modules/users/controllers/intro.ctrl.js"></script>
     <script src="modules/users/controllers/login.ctrl.js"></script>
     <script src="modules/users/controllers/signup.ctrl.js"></script>
+    <script src="modules/plan/app.plan.js"></script>
+    <script src="modules/plan/config/plan.config.js"></script>
+    <script src="modules/plan/config/plan.routes.js"></script>
+    <script src="modules/plan/controllers/plan.ctrl.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
