--- a/client/callPlannerApp/www/index.html
+++ b/client/callPlannerApp/www/index.html
@@ -6,8 +6,10 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+	<link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="views/tour/tour.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic' rel='stylesheet' type='text/css'>	
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -16,6 +18,7 @@
     <!-- ionic/angularjs js -->
     <scrit src="lib/angular/angular.js"></scrit>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+	<script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-cookies.min.js"></script>
