--- a/client/callPlannerApp/www/index.html
+++ b/client/callPlannerApp/www/index.html
@@ -6,10 +6,13 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-	<link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
+	  <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="views/tour/tour.css" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic' rel='stylesheet' type='text/css'>	
+	  <link href='https://fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic' rel='stylesheet' type='text/css'>
+    <link href="lib/md-chips/mdchips.css" rel="stylesheet" type="text/css">
+    <link href="lib/ionic-datepicker/dist/style.css" rel="stylesheet">
+
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -18,11 +21,20 @@
     <!-- ionic/angularjs js -->
     <scrit src="lib/angular/angular.js"></scrit>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-	<script src="lib/ionic-material/dist/ionic.material.min.js"></script>
+	  <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-cookies.min.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+
+    <!-- md-chips/mdchips.js -->
+    <script src="lib/md-chips/mdchips.js"></script>
+
+    <!-- path to ionic/angularjs js -->
+    <script src="lib/ionic-datepicker/dist/templates.js"></script>
+    <script src="lib/ionic-timepicker/dist/templates.js"></script>
+    <script src="lib/ionic-datepicker/dist/ionic-datepicker.js"></script>
+    <script src="lib/ionic-timepicker/dist/ionic-timepicker.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -30,6 +42,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/lb-services.js"></script>
     <script src="modules/core/app.core.js"></script>
+    <script src="modules/core/services/core.service.js"></script>
     <script src="modules/core/config/core.routes.js"></script>
     <script src="modules/core/config/core.config.js"></script>
     <script src="modules/core/controllers/route.ctrl.js"></script>
@@ -45,7 +58,8 @@
     <script src="modules/plan/app.plan.js"></script>
     <script src="modules/plan/config/plan.config.js"></script>
     <script src="modules/plan/config/plan.routes.js"></script>
-    <script src="modules/plan/controllers/plan.ctrl.js"></script>
+    <script src="modules/plan/controllers/planList.ctrl.js"></script>
+    <script src="modules/plan/controllers/createPlan.ctrl.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
